--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-# docker-composeのバージョンを指定
-version: "3.9"
 
 # # db(MySQL),app(Flask)のコンテナを作成
 # services:
@@ -36,6 +34,10 @@ version: "3.9"
 #       retries: 3
 #       # ヘルスチェックが失敗しても無視する時間は30秒
 #       start_period: 30s
+
+# docker-composeのバージョンを指定
+version: "3.9"
+
 services:
   app:
     # コンテナ名をFlaskに設定
@@ -50,15 +52,23 @@ services:
     volumes:
       - ./ChatApp:/code
     # ローカルの5000番ポートとコンテナの5000番ポートをつなぐ
-    ports:
-      - "5000:5000"
+    # ports:
+    #   - "5000:5000"
     # コマンドを実行
     command:  bash -c "gunicorn -w 1 -k eventlet -b 0.0.0.0:5000 'wsgi:app'"
     # 先にdbを起動してからappを起動する
+    # depends_on:
+    #   db:
+    #     # dbのヘルスチェックが終わってからappを起動させる
+    #     condition: service_healthy
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    ports:
+      - "80:80"
     depends_on:
-      db:
-        # dbのヘルスチェックが終わってからappを起動させる
-        condition: service_healthy
-
+      - app
 volumes:
   mysql_data:
