--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,8 +50,8 @@ services:
     volumes:
       - ./ChatApp:/code
     # ローカルの5000番ポートとコンテナの5000番ポートをつなぐ
-    ports:
-      - "5000:5000"
+    #ports:
+    #  - "5000:5000"
     # コマンドを実行
     command:  bash -c "gunicorn -w 1 -k eventlet -b 0.0.0.0:5000 'wsgi:app'"
     # 先にdbを起動してからappを起動する
@@ -59,6 +59,26 @@ services:
       db:
         # dbのヘルスチェックが終わってからappを起動させる
         condition: service_healthy
+  
+  nginx:
+    # コンテナ名をNginxに設定
+    container_name: Nginx
+    # NginxのDockerfileをビルドする
+    build:
+      # ビルドコンテキストはカレントディレクトリ
+      context: .
+      dockerfile: Docker/Nginx/Dockerfile
+    # ボリュームを指定
+    # ローカルのnginx.confファイルをコンテナの/etc/nginx/conf.d/default.confにマウント。
+    # 'ro'はread-only（読み取り専用）を意味する。
+    volumes:
+      - ./Docker/Nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    ports:
+      # ホストの5000番ポートをコンテナの5000番ポートにマッピング
+      - "5000:5000"
+    depends_on:
+      # Nginxを起動する前にappサービスを起動する
+      - app
 
 volumes:
   mysql_data:
