--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,23 +37,23 @@ services:
   #     # ヘルスチェックが失敗しても無視する時間は30秒
   #     start_period: 30s
 
-  # app:
-  #   # コンテナ名をFlaskに設定
-  #   container_name: Flask
-  #   # FlaskのDockerfileをビルドする
-  #   build:
-  #     # ビルドコンテキストはカレントディレクトリ
-  #     context: .
-  #     dockerfile: Docker/Flask/Dockerfile
-  #   # ボリュームを指定
-  #   # ローカルのカレントディレクトリをコンテナの/codeにマウントする
-  #   volumes:
-  #     - ./ChatApp:/code
-  #   # ローカルの5000番ポートとコンテナの5000番ポートをつなぐ
-  #   #ports:
-  #   #  - "5000:5000"
-  #   # コマンドを実行
-  #   command:  bash -c "gunicorn -w 1 -k eventlet -b 0.0.0.0:5000 'wsgi:app'"
+  app:
+    # コンテナ名をFlaskに設定
+    container_name: Flask
+    # FlaskのDockerfileをビルドする
+    build:
+      # ビルドコンテキストはカレントディレクトリ
+      context: .
+      dockerfile: Docker/Flask/Dockerfile
+    # ボリュームを指定
+    # ローカルのカレントディレクトリをコンテナの/codeにマウントする
+    volumes:
+      - ./ChatApp:/code
+    # ローカルの5000番ポートとコンテナの5000番ポートをつなぐ
+    #ports:
+    #  - "5000:5000"
+    # コマンドを実行
+    command:  bash -c "gunicorn -w 1 -k eventlet -b 0.0.0.0:5000 'wsgi:app'"
   #   # 先にdbを起動してからappを起動する
   #   depends_on:
   #     db:
@@ -76,9 +76,9 @@ services:
     ports:
       # ホストの5000番ポートをコンテナの5000番ポートにマッピング
       - "5000:5000"
-#     depends_on:
-#       # Nginxを起動する前にappサービスを起動する
-#       - app
+    depends_on:
+      # Nginxを起動する前にappサービスを起動する
+      - app
 
 # volumes:
 #   mysql_data:
